slight css correction to prevent word wrapping in message boxes.

--- a/src/public/message/style.css
+++ b/src/public/message/style.css
@@ -293,8 +293,6 @@ main {
     border: none;
     color: var(--lightFontColor);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
-    word-wrap: break-word;
-    word-break: break-all;
 }
 
 .received {
